# staffkm-platform

./: .dockerignore  .env.example  .env.production.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  ruff.toml
.github/: PROJECT_SETUP.md  PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  rfc.md  tech-debt.md
.github/workflows/: ci.yml  e2e-smoke.yml  playwright-e2e.yml  rag-eval.yml
apps/admin-cli/: README.md  pyproject.toml
apps/admin-cli/staffkm_cli/: __init__.py  api.py  config.py  main.py
apps/admin-cli/staffkm_cli/commands/: __init__.py  app.py  billing.py  kb.py  login.py  obs.py  plugin.py  user.py  workspace.py
apps/docs/: README.md  index.md  package.json
apps/e2e/: README.md  package.json  playwright.config.ts
apps/marketing/: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web/: .dockerignore  Dockerfile  package.json  tailwind.config.js  vite.config.ts
core/utils/: database.py
docs/: README.md
docs/brand/: brand-guideline.md
docs/ci/: pipeline.md
docs/deploy/: active-active.md  backup-restore.md  dr-drill.md  multi-region.md  multimedia-kb.md  production-deploy.md
docs/design/: dark-mode-checklist.md  ui-audit.md
docs/dev/: SESSION-HANDOFF.md  ai-workflow-gen.md  alembic.md  api-reference.md  cli.md  distributed-workers.md  idempotency.md  observability.md  plugins.md  reranker.md  sdks.md  workflow-marketplace.md
docs/governance/: coding-standards.md  definition-of-done.md  m1-ga-checklist.md  risk-register.md  slo.md
docs/ops/: backup-dr-runbook.md
docs/perf/: load-test.md  v3.3-rag-bench-history.md  v3.3-rag-bench.md  v5.12-scale-validation.md
docs/plans/: next-direction.md  observability-plan.md  v3-roadmap.md  v3.1-roadmap.md  v3.2-roadmap.md  v3.3-roadmap.md  v3.4-roadmap.md  v3.5-roadmap.md  v3.6-roadmap.md  v3.7-roadmap.md  v3.8-roadmap.md  v4.0-roadmap.md  v4.1-roadmap.md  v4.10-roadmap.md  v4.2-roadmap.md  v4.3-roadmap.md  v4.4-roadmap.md  v4.5-roadmap.md  v4.6-roadmap.md  v4.7-roadmap.md  v4.8-roadmap.md  v4.9-roadmap.md  v5.0-roadmap.md
docs/qa/: dark-mode-checklist.md  visual-sweep-sprint19-20.md
docs/release/: RELEASE-NOTES-v2.0.0.md  load-test-plan.md  uat-plan.md  v2-to-v2.1-roadmap.md
docs/rfc/: RFC-001-multi-tenant.md  RFC-002-workflow-engine-v2.md  RFC-003-monorepo-restructure.md  RFC-004-nuxt-migration.md  RFC-005-onprem-llm-first.md  RFC-006-maxkb-parity-and-chat-centric-ui.md  RFC-007-ux-research-and-brand.md  RFC-008-workflow-engine-v2.md  RFC-009-model-provider-abstract.md  (+6 more)
gateway/: Dockerfile  requirements.txt
infra/: docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml
tests/: e2e_smoke.py  test_landmine_guards.py  test_sse_guard.py  test_ssrf_guard.py
tools/: seed-marketplace.py
ui/: Dockerfile  index.html  nginx.conf  tailwind.config.js
(+619 files in other folders)
