# staffKM v2 — Monorepo root（uv workspace）
[project]
name = "staffkm-platform"
version = "2.0.0-dev"
description = "Enterprise AI knowledge management platform"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }

[tool.uv.workspace]
members = [
    "services/*",
    "packages/python/*",
]

[tool.uv.sources]
staffkm-core = { workspace = true }

[tool.ruff]
line-length = 110
target-version = "py312"
exclude = [".venv", "build", "dist", "node_modules", "apps/web", ".nuxt", ".output"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "TID"]
ignore = ["E501"]   # line length handled by formatter

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["build", ".venv", "alembic"]

[tool.pytest.ini_options]
addopts = "-ra"
# v5.9.34: CI 跑輕量測試 (landmine guards + 純邏輯單元)；
# 重型 service smoke (需全 deps) 由各 service 自行跑
testpaths = ["tests", "services/knowledge/tests"]
