[project]
name = "staffkm-cli"
version = "0.4.0"
description = "staffKM admin CLI"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.9",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "staffkm-sdk",
]

[project.scripts]
staffkm = "staffkm_cli.main:cli"
staffkm-cli = "staffkm_cli.main:cli"

[tool.uv.sources]
staffkm-sdk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["staffkm_cli"]
